--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
+
 body {
     display: flex;
     justify-content: center;
@@ -8,6 +12,7 @@ body {
 }
 
 .container {
+    display: flex;
     background-color: #e63946;
     width: 500px;
     height: 500px;
@@ -16,9 +21,19 @@ body {
 }
 
 .canvas {
+    flex: auto;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
-    flex-wrap: wrap;
     gap: 5px;
+    flex-wrap: wrap;
+}
+
+.box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    font-size: 50px;
+    border: 1px solid black;
 }
