Add box shadow styling to individual boxes

--- a/style.css
+++ b/style.css
@@ -35,5 +35,5 @@ body {
     align-items: center;
     font-weight: bold;
     font-size: 50px;
-    border: 1px solid black;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
 }
