--- a/style.css
+++ b/style.css
@@ -4,8 +4,10 @@
 
 body {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 15px;
 
     background-color: #f1faee;
     height: 100vh;
@@ -18,6 +20,20 @@ body {
     height: 500px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     border: 1px solid #ad2a35;
+}
+
+.bottom {
+    display: flex;
+    gap: 15px;
+}
+
+.button-1, .button-2 {
+    appearance: none;
+    border: 1px solid #af7729;
+    border-radius: 3px;
+    padding: 5px 20px;
+    background-color: #FFB140;
+    
 }
 
 .canvas {
