--- a/style.css
+++ b/style.css
@@ -62,12 +62,12 @@ body {
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
 }
 
-.win {
+.forfeit {
     background-color: #40b27b;
     color: #133625;
 }
 
-body > div.main-container > div.win {
+body > div.main-container > div.forfeit {
     border: 1px solid #133625;
 }
 
