--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ body {
     gap: 10px;
 }
 
-.intro-btn {
+.intro-btn, .confirm-btn, .back-btn {
     border: none;
     width: 100px;
     height: 25px;
@@ -77,21 +77,26 @@ body {
     color: #f1faee;
 }
 
-.two-player-btn {
+.two-player-btn, .confirm-btn {
     background-color: #e63946;
 }
 
-.computer-btn {
+.computer-btn, .back-btn {
     background-color: #40b27b;
 }
 
-.computer-btn:hover {
+.computer-btn:hover, .back-btn:hover {
     background-color: #3aa370;
 } 
 
-.two-player-btn:hover {
+.two-player-btn:hover, .confirm-btn:hover {
     background-color: #bb2f3b;
 }
+
+.confirm-btn, .back-btn {
+    width: 75px;
+}
+
 
 .rematch, .start-over, .forfeit-p1, .forfeit-p2 {
     width: 100px;
